<resources>
    <string name="app_name">GitHub Challenge</string>

    // MainActivity
    <string name="start">Start</string>
    <string name="github_user_name">GitHub User Name</string>
    <string name="github_user_one">GitHub User One</string>
    <string name="github_user_two">GitHub User Two</string>
    <string name="enter_github_user_name">enter user name</string>
    <string name="enter_github_user_name_one">click here for 1st user name</string>
    <string name="enter_github_user_name_two">click here for 2nd user name</string>
    <string name="empty_user_name">enter both user names</string>
    <string name="invalid_user_name_one">first user name is invalid!</string>
    <string name="invalid_user_name_two">second user name is invalid!</string>
    <string name="tooltip_enter_github_users">Enter the names of two GitHub users then press Start. Both names must be for valid GitHub user logins.</string>

    // BrowseUsersRepositorysActivity
    <string name="the_winner">is the winner with</string>
    <string name="stars">stars</string>
    <string name="user_one">User One</string>
    <string name="user_two">User Two</string>
    <string name="user_name">User Name</string>
    <string name="profile">Profile URL</string>
    <string name="no_internet_browser">Internet browser not found!</string>
    <string name="ok">Ok</string>
    <string name="not_online">The Internet connection is offline!</string>

</resources>
