<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">

    <data>
        <variable
            name="mainActivity"
            type="com.harlie.leehounshell.gitchallenge.view.MainActivity"/>
        <variable
            name="gitHubUserOne"
            type="com.harlie.leehounshell.gitchallenge.model.GitHubUser_Model"/>
        <variable
            name="gitHubUserTwo"
            type="com.harlie.leehounshell.gitchallenge.model.GitHubUser_Model"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/item_margin">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/git_user_one_label"
                    style="@style/MyPrimaryTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github_user_one"
                    android:textStyle="bold"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/git_user_one_edit_text"
                    style="@style/MyPrimaryTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gitHubUserOne.getUserName()}"
                    android:onClick="@{(view) -> gitHubUserOne.enterGitHubUser(view)}"
                    android:hint="@string/enter_github_user_name_one"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/git_user_two_label"
                    style="@style/MyPrimaryTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github_user_two"
                    android:textStyle="bold"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/git_user_two_edit_text"
                    style="@style/MyPrimaryTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{gitHubUserTwo.getUserName()}"
                    android:onClick="@{(view) -> gitHubUserTwo.enterGitHubUser(view)}"
                    android:hint="@string/enter_github_user_name_two"/>

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/start_button"
                    style="@style/TargetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> mainActivity.searchGitHubUsers(gitHubUserOne, gitHubUserTwo)}"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/item_margin"
                    app:srcCompat="@drawable/start_button_selector"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/start"
                    android:focusable="true"/>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

        <include layout="@layout/progress_bar"/>

    </FrameLayout>

</layout>
